# leaderboards

./: README.md  db.sqlite3  docker-compose.yml  package-lock.json  package.json  pyproject.toml
boards/: consumers.py  forms.py  redis_client.py  routing.py  tests.py  types.py  urls.py  utils.py  views.py
boards/static/boards/: utils.js  websocket.js
boards/templates/boards/: base.html  board.html  board_detail.html  index.html  login.html  navbar.html  page_container.html  registration.html  score_form.html  score_fragment.html
local-data/: dump.rdb
mysite/: asgi.py  settings.py  urls.py
