[tool.poetry]
name = "leaderboard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "boards"}]

[tool.poetry.dependencies]
python = ">=3.13"
django = "^5.1.6"
django-redis = ">=5.4.0,<6.0.0"
channels = ">=4.2.0,<5.0.0"
daphne = "^4.1.2"
channels-redis = "^4.2.1"
aioredis = "^2.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.18.0"

